# speciam

./: .gitignore  Cargo.toml  target  test_dir
speciam/: Cargo.toml
speciam/src/: cache.rs  domain.rs  download.rs  lib.rs  robots.rs  scrape.rs  test.rs  thread_limiter.rs
speciam_cli/: Cargo.toml
speciam_cli/src/: args.rs  init.rs  log.rs  main.rs  progress.rs  resume.rs
