[package]
name = "speciam"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dependencies]
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs"] }
governor = "0.6"
robotstxt = "0.3"
error-stack = "0.5"
thiserror = "1"
select = "0.6"
url = "2"
bytes = "1.7"
futures = "0.3"
once_map = "0.4.19"

serde = { version = "1", optional = true, features = ["derive"] }
tracing = { version = "0.1.40", optional = true }
texting_robots = "0.2"

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "*", features = ["http2", "rustls-tls"] }
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
