[package]
name = "speciam_cli"
version = "0.1.0"
edition = "2021"

[features]
vendored = ["reqwest/native-tls-vendored", "async-sqlite?/bundled"]
compression = ["reqwest/brotli", "reqwest/deflate", "reqwest/gzip", "reqwest/zstd"]
resume = ["dep:async-sqlite"]
tracing = ["speciam/tracing", "dep:tracing-subscriber"]

[dependencies]
async-channel = "2.3.1"
async-sqlite = { version = "0.3.1", optional = true, default-features = false }
clap = { version = "4.5.11", features = ["derive"] }
console = "0.15.8"
error-stack = "0.5.0"
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["http2", "rustls-tls"] }
speciam = { path = "../speciam" }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", optional = true, features = ["json"] }
url = "2.5.2"
