[package]
name = "speciam_cli"
version = "0.2.0"
edition = "2021"

[features]
vendored = ["reqwest/native-tls-vendored", "async-sqlite?/bundled"]
compression = ["reqwest/brotli", "reqwest/deflate", "reqwest/gzip", "reqwest/zstd"]
resume = ["dep:async-sqlite"]
tracing = ["speciam/tracing", "dep:tracing-subscriber"]
tokio_console = ["dep:console-subscriber"]

[dependencies]
async-sqlite = { version = "0.3.1", optional = true, default-features = false }
bare_err_tree = { workspace = true, features = ["source_line", "tracing"] }
clap = { version = "4.5.11", features = ["derive"] }
console = "0.15.8"
console-subscriber = { version = "0.4.0", optional = true }
futures = "0.3.30"
indicatif = "0.17.8"
once_map = "0.4.19"
reqwest = { version = "0.12.7", features = ["http2", "rustls-tls"] }
speciam = { path = "../speciam", features = ["file_renaming"] }
texting_robots = "0.2.2"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-error = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.18", optional = true, features = ["json"] }
url = "2.5.2"
